--- a/index.html
+++ b/index.html
@@ -176,8 +176,175 @@
           </div>
      </header>
 
+
      <!-- main section -->
-      <main class="md:w-11/12 md:mx-auto"></main>
+      <main class="md:w-11/12 md:mx-auto">
+
+        <!-- featured bike section -->
+         <section class="my-20">
+
+            <!-- text container -->
+             <div class="text-center">
+              <h1 class="text-3xl font-bold">Fetured Bikes In This Year</h1>
+              <p class="text-[#E76F51] text-sm">Best bike collection</p>
+             </div>
+
+             <!-- image container -->
+              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:gap-14 my-10">
+                <img src="./images/others/feature-bike.png" alt="">
+                <img src="./images/others/feature-bike.png" alt="">
+                <img src="./images/others/feature-bike.png" alt="">
+              </div>
+          
+         </section>
+
+         <!-- latest bike section -->
+          <section class="my-20">
+            <h3 class="text-center text-4xl font-bold mb-5">Latest Bike</h3>
+            <!-- cards -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+              <!-- card 1 -->
+              <div class="card bg-base-100  shadow-xl">
+                <figure>
+                  <img
+                    src="./images/others/latest1.png"
+                    alt="Shoes" />
+                </figure>
+                <div class="card-body space-y-4">
+                  <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                  <div class="card-actions">
+                    <button class="btn bg-bikerprimary text-white">Read More</button>
+                  </div>
+                </div>
+              </div>
+              <!-- card 2 -->
+              <div class="card bg-base-100  shadow-xl">
+                <figure>
+                  <img
+                    src="./images/others/latest2.png"
+                    alt="Shoes" />
+                </figure>
+                <div class="card-body space-y-4">
+                  <h2 class="card-title">Motorcycles & Scooters</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                  <div class="card-actions">
+                    <button class="btn btn-outline btn-warning  text-white">Read More</button>
+                  </div>
+                </div>
+              </div>
+              <!-- card 3 -->
+              <div class="card bg-base-100  shadow-xl">
+                <figure>
+                  <img
+                    src="./images/others/latest3.png"
+                    alt="Shoes" />
+                </figure>
+                <div class="card-body space-y-4">
+                  <h2 class="card-title">2021 Honda CBR500R</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                  <div class="card-actions">
+                    <button class="btn btn-outline btn-warning  text-white">Read More</button>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </section>
+
+          <!-- Happy clients section -->
+           <section class="my-20 ">
+              <h2 class="text-3xl font-bold text-center
+              mb-16">Happy <span class="text-[#E76F51]">Clients says</span> </h2>
+
+              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+                <!-- card 1 -->
+                <div class="card bg-base-100  shadow-xl text-center">
+                  <figure>
+                    <img
+                      src="./images/others/user-1.png"
+                      alt="Shoes" class="w-52" />
+                  </figure>
+                  <div class="card-body ">
+                    <p>Slate helps you see how 
+                      many more days you need 
+                      to work to reach your financial 
+                      goal for the month and year.</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input
+                          type="radio"
+                          name="rating-2"
+                          class="mask mask-star-2 bg-orange-400"
+                          checked="checked" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      </div>
+                    <a href="#">Regina Miles</a>
+                    <h4>Banker</h4>
+                  </div>
+                </div>
+
+                <!-- card 1 -->
+                <div class="card bg-base-100  shadow-xl text-center">
+                  <figure>
+                    <img
+                      src="./images/others/user-2.png"
+                      alt="Shoes" class="w-52"/>
+                  </figure>
+                  <div class="card-body">
+                    <p>Slate helps you see how 
+                      many more days you need 
+                      to work to reach your financial 
+                      goal for the month and year.</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input
+                          type="radio"
+                          name="rating-2"
+                          class="mask mask-star-2 bg-orange-400"
+                          checked="checked" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      </div>
+                    <a href="#">Regina Miles</a>
+                    <h4>Banker</h4>
+                  </div>
+                </div>
+
+                <!-- card 1 -->
+                <div class="card bg-base-100  shadow-xl text-center">
+                  <figure>
+                    <img
+                      src="./images/others/user-3.png"
+                      alt="Shoes" class="w-52" />
+                  </figure>
+                  <div class="card-body">
+                    <p>Slate helps you see how 
+                      many more days you need 
+                      to work to reach your financial 
+                      goal for the month and year.</p>
+                      <div class="rating ">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input
+                          type="radio"
+                          name="rating-2"
+                          class="mask mask-star-2 bg-orange-400"
+                          checked="checked" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      </div>
+                    <a href="#">Regina Miles</a>
+                    <h4>Banker</h4>
+                  </div>
+                </div>
+              </div>
+           </section>
+
+      </main>
 
       <!-- footer section -->
        <footer></footer>
